# Random-Name-Generator

./: LICENSE.md  MyREADME.md  README.md  README_AdamTadele.md  README_JhanaviPatel.md  README_Luca_A.md  README_ahmadsadik.md  README_boneylabinghisa.md  README_tomkuson.md  README_zainu.md  RNG.py  Untitled.ipynb  Zainu_Mini Project.ipynb  final_project.py  main-option-1.py  main-option-2.py  main.py  main_JhanaviPatel.py  main_Luca_A.py  main_boneylabinghisa.py  main_zainu.ipynb  name-generator.py  pyproject.toml  random_nam.ipynb  random_name_generator.py  run_project.py  test.py
.github/workflows/: ci.yml
random_name_generator/: __main__.py  main.py
random_name_generator/tests/: test_main.py
random_name_generator_tomkuson/: main.py
random_name_generator_tomkuson/tests/: names.txt  test_main.py
